# cnn-mnist-digits

./: .gitignore  README.md  cnn.py  data_loader.py  data_transformer.py  model_evaluator.py  model_trainer.py  pipeline.py  pyproject.toml
